--- a/styles/style.css
+++ b/styles/style.css
@@ -249,6 +249,7 @@ background-color: rgba(48, 48, 48, 0.726);
     /* border: 2px solid white; */
     margin: 0 auto;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 .habit-content-des{
     max-width: 600px;
@@ -321,6 +322,54 @@ background-color: rgba(48, 48, 48, 0.726);
     
 }
 
+.run-container{
+    max-width: 1000px;
+    height: 370px;
+    /* border: 2px solid yellowgreen; */
+    margin: 0 auto;
+    margin-bottom:100px ;
+    display: grid;
+    gap:100px;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: rgba(255, 255, 255, 0.073);
+    border-radius: 10px;
+    /* padding: 20px 0px 20px 58px; */
+}
+.run-content{
+    max-width: 450px;
+    height: 280px;
+    /* border: 2px solid green; */
+    margin: 40px 0px 20px 50px;
+}
+.run-title{
+    font-size: 3rem;
+    color:#FFFFFF;
+    font-family: Inter;
+    font-weight: black;
+    margin-top: 0px;
+    margin-bottom:15px;
+}
+.run-des{
+    font-size: 0.8rem;
+    color:rgba(255, 255, 255, 0.358);
+    font-family: Inter;
+    font-weight: Regular;
+    margin-bottom: 30px;
+}
+.run-image{
+    max-width: 350px;
+    height: 330px;
+    /* border: 2px solid green; */
+    margin: 20px 0px 15px 60px;
+   
+}
+.run-image img{
+    width: 100%;
+    height:330px;
+    border-radius: 10px;
+}
+
+
 
 @media screen and (max-width: 576px){
     
@@ -356,10 +405,23 @@ background: none;
     .card-2{
         top: -110%;
     }
+    .habit-container{
+        height: auto;
+    }
     .habit-img-container{
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(1, 1fr);
         height: auto;
     margin-left: 100px;
     }
-  
+   
+     .run-container{
+        grid-template-columns: 1fr;
+        height:auto;
+        gap: 20px;
+    } 
+.run-image{
+        
+        margin: 20px 0px 15px 40px;
+}
+
 }
