--- a/styles/style.css
+++ b/styles/style.css
@@ -381,7 +381,7 @@ background-color: rgba(48, 48, 48, 0.726);
 .bmi-calculator-content{
     max-width: 600px;
     height:120px;
-    border:2px solid blue;
+    /* border:2px solid blue; */
     margin: 0 auto;
    
 }
@@ -542,6 +542,97 @@ padding-left: 10px;
 padding-left: 10px;
 }
 
+.team-container{
+    max-width: 1060px;
+    height:775px;
+    /* border: 2px solid red ; */
+    margin: 0 auto;
+    margin-bottom: 90px;
+    
+}
+
+.team-content{
+    max-width: 650px;
+    height: 120px;
+    /* border: 2px solid blue; */
+    margin: 0 auto;
+    margin-bottom: 52px;
+}
+.team-title{
+    font-size: 2.8rem;
+    font-family: Inter;
+    font-weight: Black;
+    color: #FFFFFF;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.team-des{
+    font-size: 0.9rem;
+    font-family: Inter;
+    font-weight: Regular;
+    color: rgba(255, 255, 255, 0.50);
+    text-align: center;
+}
+.team-image-container{
+    max-width: 1060px;
+    height: 580px;
+    /* border:2px solid green; */
+    padding: 15px ;
+    background-color: rgba(255, 255, 255, 0.10);
+    border-radius: 8px;
+}
+.team-image-content{
+   
+    max-width: 1060px;
+    height: 580px;
+    margin: 0 auto;
+    /* border:2px solid red; */
+    display: grid;
+    gap:18px;
+    grid-template-columns: repeat(3, 1fr);
+    
+  
+}
+.team-img{
+    max-width: 328px;
+    height:279px;
+    /* border:2px solid yellow; */
+    
+}
+.team-img img{
+    width:100%;
+    height:279px;
+    border-radius: 10px;
+}
+.team-card{
+    max-width: 240px;
+    height:43px;
+    /* border:2px solid green; */
+    position: relative;
+    top: -25%;
+    left: 20px;
+}
+
+.team-card-title{
+    font-size: 1.2rem;
+    font-family: Inter;
+    font-weight: Black;
+    color: #FFFFFF;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    /* text-align: center; */
+}
+.team-card-des{
+    font-size: 0.8rem;
+    font-family: Inter;
+    font-weight: Regular;
+    color: rgba(255, 255, 255, 0.542);
+    margin-top: 0px;
+   
+    /* text-align: center; */
+}
+
 
 @media screen and (max-width: 576px){
     
@@ -604,6 +695,10 @@ background: none;
     height: auto;
     gap: 40px;
     margin-left: -40px;
+}
+.team-image-content{
+    grid-template-columns: 1fr;
+    height: auto;
 }
 
 
