--- a/styles/style.css
+++ b/styles/style.css
@@ -597,8 +597,8 @@ padding-left: 10px;
 .team-img{
     max-width: 328px;
     height:279px;
-   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.503), black);
-   opacity: 0.85;
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.503), black);
+    opacity: 0.7;
     /* border:2px solid yellow; */
     
 }
@@ -606,6 +606,7 @@ padding-left: 10px;
     width:100%;
     height:279px;
     border-radius: 10px;
+    
 }
 .team-card{
     max-width: 240px;
@@ -634,7 +635,93 @@ padding-left: 10px;
    
     /* text-align: center; */
 }
-
+.footer-container{
+    max-width:1440px;
+    height:500px;
+    /* border: 2px solid red; */
+    margin: 0 auto;
+    border-top: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.027);
+}
+.footer-content{
+    max-width: 1040px;
+    height: 250px;
+    margin: 0 auto;
+    /* border: 2px solid blue; */
+   margin-top: 60px;
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   margin-bottom: 90px;
+}
+.footer-content-div-1{
+    max-width: 540px;
+    height:250px;
+    /* border:2px solid green; */
+}
+.footer-second-content{
+    max-width: 540px;
+    height:250px;
+    /* border:2px solid yellow; */
+    display: grid;
+    gap: 150px;
+    grid-template-columns: repeat(2, 1fr);
+}
+.footer-content-div-2, .footer-content-div-3{
+    max-width: 185px;
+    height:250;
+    /* border:2px solid green; */
+}
+.first-content{
+    max-width: 400px;
+    height:180px;
+    /* border:2px solid aqua; */
+}
+.content-title{
+    font-size: 4.14rem;
+    font-family: Inter;
+    font-weight: Extra Bold Italic;
+    color: #E6533C;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+.content-des{
+    font-size: 0.93rem;
+    font-family: Inter;
+    font-weight: Regular;
+    color: rgba(255, 255, 255, 0.50);
+}
+.content-2-title{
+    font-size: 2rem;
+    font-family: Inter;
+    font-weight: Bold;
+    color: #FFFFFF;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+ol li{
+    font-size: 1.15rem;
+    font-family: Inter;
+    font-weight: Regular;
+    color: rgba(255, 255, 255, 0.50);
+    list-style: none;
+    margin-bottom: 20px;
+    margin-left: -30px;
+}
+.footer-last{
+    max-width: 990px;
+    height: 80px;
+    margin: 0 auto;
+    /* border:2px solid antiquewhite; */
+    border-top: 1px solid rgba(255, 255, 255, 0.10);
+}
+.footer-last p{
+    font-size: 1.2rem;
+    font-family: Inter;
+    font-weight: Regular;
+    color: rgba(255, 255, 255, 0.50);
+    text-align: center;
+    margin-top: 35px;
+}
 
 @media screen and (max-width: 576px){
     
@@ -700,10 +787,50 @@ padding-left: 10px;
     gap: 40px;
     margin-left: -40px;
 }
+.team-container{
+    height: auto;
+}
+.team-image-container{
+    height:auto;
+}
 .team-image-content{
     grid-template-columns: 1fr;
+    height:auto;
+    
+}
+.footer-container{
+    height:auto;
+    /* margin-left: -140px; */
+}
+.footer-content{
+    grid-template-columns: 1fr;
+    height: auto;
+    gap:0px;
+    margin-bottom: 10px;
+}
+
+
+.first-content{
+    margin-top: -15px;
+    height:auto;
+ 
+   
+}
+.footer-content-div-1{
+    margin-bottom: -55px;
+    
+}
+
+.footer-second-content{
+    grid-template-columns: 1fr;
+    gap: 20px;
+    height:auto;
+    margin-bottom: 50px;
+}
+.footer-last{
     height:auto;
 }
 
 
 }
+
