--- a/styles/style.css
+++ b/styles/style.css
@@ -373,11 +373,131 @@ background-color: rgba(48, 48, 48, 0.726);
 }
 .unique-section-container{
     max-width: 1000px;
-    height: 700px;
+    height: 1355px;
     margin: 0 auto;
     margin-bottom: 100px;
-    border:2px solid yellow;
+    /* border:2px solid yellow; */
 }
+/* .first-section-content{
+    max-width: 1000px;
+    height: 300px;
+    margin:0 auto;
+    border:2px solid red;
+    display: grid;
+    gap:65px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 15px;
+} */
+.unique-section-content{
+    max-width: 500px;
+    height: 200px;
+    margin:0 auto;
+    /* border:2px solid blue; */
+    margin-bottom: 60px;
+    text-align: center;
+}
+.unique-title{
+    font-size: 2.8rem;
+    color:#FFFFFF;
+    font-family: Inter;
+    font-weight: black;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+.unique-des{
+    font-size: 1rem;
+    color:rgba(255, 255, 255, 0.50);
+    font-family: Inter;
+    font-weight: Regular;
+    margin-bottom: 30px;
+}
+
+.video-content{
+    max-width: 860px;
+    height: 350px;
+    margin:0 auto;
+    margin-bottom: 55px;
+   
+}
+.video-content iframe{
+    width:100%;
+    border-radius: 10px;
+    border:2px solid rgba(255, 255, 255, 0.434);
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.384), black);
+    opacity: 0.7;
+}
+.gadget-container{
+    max-width: 1000px;
+    height: 665px;
+    margin:0 auto;
+    display: grid;
+    gap:10px;
+    grid-template-columns: repeat(3, 1fr);
+}
+.gadget-content{
+    max-width: 320px;
+    height: 320px;
+    margin:0 auto;
+    border:2px solid rgba(255, 255, 255, 0.074);
+}
+.gadget-image{
+    max-width: 235px;
+    height: 160px;
+    margin:0 auto;
+    margin-top: 10px;
+    /* border:2px solid yellow; */
+    
+
+}
+.gadget-image img{
+    width:100%;
+    height:150px;
+    border-radius: 8px;
+    border:1px solid rgba(255, 255, 255, 0);
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.384), black);
+    opacity: 0.85;
+}
+.gadget-title{
+    font-size: 1.1rem;
+    color:#FFFFFF;
+    font-family: Inter;
+    font-weight: black;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+}
+.gadget-des{
+    font-size: 0.8rem;
+    color:rgba(255, 255, 255, 0.50);
+    font-family: Inter;
+    font-weight: Regular;
+    margin-left: 5px;
+}
+.gadget-price{
+    font-size: 1rem;
+    color:#FFFFFF;
+    font-family: Inter;
+    font-weight: Regular;
+    margin-left: 5px;
+   
+}
+#specific{
+    margin-top: 48px;
+}
+#specific1{
+    margin-top: 32px;
+}
+
+#specific2{
+    margin-top: 27px;
+}
+#specific3{
+    margin-top: 32px;
+}
+#specific4{
+    margin-top: 46px;
+}
+
 .bmi-calculator-content{
     max-width: 600px;
     height:120px;
@@ -758,6 +878,7 @@ ol li{
     .card-2{
         top: -110%;
         right: -10px;
+        
 
     }
     .habit-container{
@@ -778,6 +899,15 @@ ol li{
         
         margin: 20px 0px 15px 40px;
 }
+.unique-section-container{
+    height:auto;
+}
+.gadget-container{
+    grid-template-columns: 1fr;
+    height:auto;
+}
+
+
 .bmi-section-container{
     height: auto;
 }
