--- a/styles/style.css
+++ b/styles/style.css
@@ -700,7 +700,7 @@ padding-left: 10px;
     /* border:2px solid green; */
     padding: 15px ;
     background-color: rgba(255, 255, 255, 0.10);
-    border-radius: 8px;
+    border-radius: 10px;
 }
 .team-image-content{
    
@@ -717,16 +717,16 @@ padding-left: 10px;
 .team-img{
     max-width: 328px;
     height:279px;
-    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.503), black);
-    opacity: 0.7;
-    /* border:2px solid yellow; */
     
+    /* border:2px solid yellow; */
+  
 }
 .team-img img{
     width:100%;
     height:279px;
-    border-radius: 10px;
-    
+    border-radius: 15px;
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.503), black);
+    opacity: 0.7;
 }
 .team-card{
     max-width: 240px;
@@ -833,6 +833,7 @@ ol li{
     margin: 0 auto;
     /* border:2px solid antiquewhite; */
     border-top: 1px solid rgba(255, 255, 255, 0.10);
+    padding-bottom: 5px;
 }
 .footer-last p{
     font-size: 1.2rem;
