--- a/styles/style.css
+++ b/styles/style.css
@@ -618,7 +618,7 @@ table, thead, th, td{
     text-align: left;
 }
 .characteristics{
-    max-width: 231px;
+    width: 200px;
     height:45px;
     background-color: rgba(255, 255, 255, 0.10);
     font-size:0.9rem;
@@ -630,9 +630,10 @@ table, thead, th, td{
     margin-bottom: 10px;
     margin-right: 5px;
 padding-left: 10px;
+/* border:2px solid blue; */
 }
 .gender{
-    width: 215px;
+    width: 211px;
     height:45px;
     background-color: rgba(255, 255, 255, 0.10);
     font-size:0.9rem;
@@ -642,13 +643,14 @@ padding-left: 10px;
     border: none;
     border-radius: 10px;
     margin-bottom: 10px;
-    margin-right: 5px;
-padding-left: 10px;
+    margin-right: 5px; 
+ padding-left: 8px; 
+/* border:2px solid red; */
 
 }
 
 .activity{
-    width:440px;
+    width:434px;
     height:45px;
     background-color: rgba(255, 255, 255, 0.10);
     font-size:0.9rem;
@@ -657,7 +659,7 @@ padding-left: 10px;
     color:rgba(255, 255, 255, 0.41);
     border: none;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     margin-right: 5px;
 padding-left: 10px;
 }
